RESOLVED FIXED94878
[EFL] fast/forms/menulist-restrict-line-height.html is failing
https://bugs.webkit.org/show_bug.cgi?id=94878
Summary [EFL] fast/forms/menulist-restrict-line-height.html is failing
KwangYong Choi
Reported 2012-08-23 17:15:37 PDT
fast/forms/menulist-restrict-line-height.html The text in the popup button is clipped.
Attachments
Patch (15.42 KB, patch)
2012-09-10 01:12 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2012-09-10 01:12:54 PDT
Chris Dumez
Comment 2 2012-09-10 01:18:57 PDT
FYI, the fix is taken for Mac port: https://trac.webkit.org/changeset/24886
Chris Dumez
Comment 3 2012-09-10 01:19:17 PDT
*from Mac port
WebKit Review Bot
Comment 4 2012-09-10 01:57:05 PDT
Comment on attachment 163061 [details] Patch Clearing flags on attachment: 163061 Committed r128032: <http://trac.webkit.org/changeset/128032>
WebKit Review Bot
Comment 5 2012-09-10 01:57:09 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.