[EFL] fast/forms/menulist-restrict-line-height.html is failing https://bugs.webkit.org/show_bug.cgi?id=94878

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-09-10
Reviewed by Kenneth Rohde Christiansen.

Source/WebCore:

<select> element's text is no longer clipped when a CSS
line-height is specified. The fix is the same as for
Mac port in r24886.

Test: fast/forms/menulist-restrict-line-height.html

* platform/efl/RenderThemeEfl.cpp:
(WebCore::RenderThemeEfl::adjustMenuListStyle):

LayoutTests:

Generate baseline for fast/forms/menulist-restrict-line-height.html
and unskip the test now that <select> element's text is no longer
clipped when a CSS line-height is specified.

* platform/efl/TestExpectations:
* platform/efl/fast/forms/menulist-restrict-line-height-expected.png: Added.
* platform/efl/fast/forms/menulist-restrict-line-height-expected.txt: Added.

Canonical link: https://commits.webkit.org/114127@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@128032 268f45cc-cd09-0410-ab3c-d52691b4dbfc